# simbus

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  example.py  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
devices/: papouch-th2e.yaml
docs/: idea.md  scenarios.md  simulation.md
scenarios/: fast-alarm-test.yaml  heat-wave.yaml  power-outage.yaml  stuck-sensor.yaml  thermal-runaway.yaml
simbus/: __init__.py  cli.py  logging_config.py  settings.py
simbus/api/: main.py  schemas.py
simbus/api/routers/: registers.py  scenarios.py  simulation.py  status.py
simbus/builtin/: generic-crac.yaml  generic-door-contact.yaml  generic-leak-sensor.yaml  generic-pdu.yaml  generic-power-meter.yaml  generic-tnh-sensor.yaml  generic-ups.yaml
simbus/config/: loader.py  schema.py
simbus/core/: modbus_server.py  store.py
simbus/scenarios/: __init__.py  engine.py  loader.py  schema.py
simbus/simulation/: behaviors.py  engine.py  faults.py
tests/: test_api.py  test_behaviors.py  test_cli.py  test_config.py  test_modbus_server.py  test_scenarios.py  test_simulation_engine.py  test_store.py
